# GridAwareEVServer

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-46c4053e3fd53a10ab31b83c278b957265a830312844143094b0e8a0a20dbae5.json  query-953064526beeb57cbc88f883244d3355c47e3ff39f26a217eb013a5606f3958e.json
src/: helper_functions.rs  main.rs  structs.rs
src/api_endpoints/: admin_endpoints.rs  data_queries.rs  device_endpoints.rs  mod.rs  user_endpoints.rs
src/helper_functions/: helper_functions.rs  mod.rs
src/structs/: mod.rs  structs.rs
