[package]
name = "grid-aware-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.1.0"
jsonwebtoken = "9.3.0"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_with = "3.9.0"
sha2 = "0.10.8"
sqlx =  { version = "0.8.0", features = ["postgres", "runtime-tokio-native-tls", "time", "chrono"] }
time = { version = "0.3.36", features = ["serde"] }
